--- a/frontend/app/src/main/res/layout/activity_errors.xml
+++ b/frontend/app/src/main/res/layout/activity_errors.xml
@@ -166,11 +166,10 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/errorView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
         android:background="@drawable/round_box_grey"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         tools:layout_editor_absoluteX="25dp" />
