--- a/frontend/app/src/main/res/layout/activity_info.xml
+++ b/frontend/app/src/main/res/layout/activity_info.xml
@@ -10,7 +10,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/textView3"
@@ -76,12 +77,12 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/infoView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="25dp"
         android:background="@drawable/round_box_grey"
-        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2"
+        tools:layout_editor_absoluteX="25dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
