--- a/frontend/app/src/main/res/layout/activity_more_errors.xml
+++ b/frontend/app/src/main/res/layout/activity_more_errors.xml
@@ -81,7 +81,9 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="25dp"
-        android:background="#ffffff"
+        android:background="@drawable/round_box_grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LinearLayout2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
