--- a/frontend/app/src/main/res/layout/defect_row.xml
+++ b/frontend/app/src/main/res/layout/defect_row.xml
@@ -12,26 +12,34 @@
         app:srcCompat="@drawable/example_fabric" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/errorName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
         android:text="TextView"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/imageView6" />
+        android:textColor="#989898"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
+        android:text="Test Date"
         android:textColor="#FFFFFF"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/errorName" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/testDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
@@ -41,17 +49,21 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
+        android:text="Issue Name"
         android:textColor="#FFFFFF"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/testDate" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/issueName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
         android:text="TextView"
-        android:textColor="#FFFFFF"
+        android:textColor="#FF2727"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 </androidx.constraintlayout.widget.ConstraintLayout>
