--- a/frontend/app/src/main/res/layout/activity_more_errors.xml
+++ b/frontend/app/src/main/res/layout/activity_more_errors.xml
@@ -82,12 +82,11 @@
             android:id="@+id/defectView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginStart="25dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/round_box_grey" />
+            android:layout_weight="1" />
 
     </LinearLayout>
 
