--- a/frontend/app/src/main/res/layout/defect_row.xml
+++ b/frontend/app/src/main/res/layout/defect_row.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black">
+    android:background="@drawable/round_box_grey">
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/example_fabric" />
 
