--- a/frontend/app/src/main/res/layout/defect_row.xml
+++ b/frontend/app/src/main/res/layout/defect_row.xml
@@ -8,7 +8,11 @@
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="125dp"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
         app:srcCompat="@drawable/example_fabric" />
 
     <TextView
