--- a/frontend/app/src/main/res/layout/fabric_row.xml
+++ b/frontend/app/src/main/res/layout/fabric_row.xml
@@ -21,12 +21,17 @@
         android:id="@+id/imageView5"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/example_fabric" />
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/example_fabric"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/loram"
         android:text="ID "
         android:textColor="@color/white"
@@ -37,6 +42,7 @@
         android:id="@+id/idView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/loram"
         android:text="12345"
         android:textColor="@color/white"
@@ -47,6 +53,7 @@
         android:id="@+id/dateView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/loram"
         android:text=" YYYY MM DD hh:MM"
         android:textColor="@color/white"
@@ -57,6 +64,7 @@
         android:id="@+id/defectView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/loram"
         android:text="TextView"
         android:textColor="@color/white"
@@ -80,6 +88,7 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/lora_b"
         android:text="Error Rate"
         android:textColor="#FF3030"
@@ -91,6 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
+
         android:text="/"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -101,7 +111,7 @@
         android:id="@+id/eRateView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="14dp"
         android:fontFamily="@font/lora_b"
         android:text="0.24%"
         android:textColor="#FF3030"
