--- a/frontend/app/src/main/res/layout/defect_row.xml
+++ b/frontend/app/src/main/res/layout/defect_row.xml
@@ -11,6 +11,7 @@
         android:layout_height="100dp"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
         app:srcCompat="@drawable/example_fabric" />
