--- a/frontend/app/src/main/res/layout/fabric_row.xml
+++ b/frontend/app/src/main/res/layout/fabric_row.xml
@@ -24,8 +24,10 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:src="@drawable/example_fabric"
+        app:layout_constraintBottom_toBottomOf="@+id/defectView"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/defectView" />
 
     <TextView
         android:id="@+id/textView5"
@@ -36,7 +38,8 @@
         android:text="ID "
         android:textColor="@color/white"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView5" />
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/idView"
@@ -47,6 +50,7 @@
         android:text="12345"
         android:textColor="@color/white"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/dateView"
         app:layout_constraintStart_toEndOf="@+id/textView5" />
 
     <TextView
@@ -117,4 +121,14 @@
         android:textColor="#FF3030"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <ImageView
+        android:id="@+id/chartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_bar_chart_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
