--- a/frontend/app/src/main/res/layout/activity_chart.xml
+++ b/frontend/app/src/main/res/layout/activity_chart.xml
@@ -8,9 +8,12 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
         <TextView
@@ -38,15 +41,6 @@
             android:drawableTint="#FFFFFF" />
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="199dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
-        app:srcCompat="@drawable/baseline_check_24"
-        tools:layout_editor_absoluteY="171dp" />
 
     <ImageView
         android:id="@+id/imageView11"
@@ -79,7 +73,7 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textView13"
-        tools:layout_editor_absoluteY="73dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
         android:id="@+id/dateView3"
@@ -93,7 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <TextView
-        android:id="@+id/defectView3"
+        android:id="@+id/totalView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -101,11 +95,11 @@
         android:fontFamily="@font/loram"
         android:text="TextView"
         android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/totalView3"
+        app:layout_constraintStart_toEndOf="@+id/defectView3"
         app:layout_constraintTop_toBottomOf="@+id/dateView3" />
 
     <TextView
-        android:id="@+id/totalView3"
+        android:id="@+id/defectView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -117,17 +111,6 @@
         app:layout_constraintTop_toBottomOf="@+id/dateView3" />
 
     <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:fontFamily="@font/lora_b"
-        android:text="Error Rate"
-        android:textColor="#FF3030"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/totalView3" />
-
-    <TextView
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -135,25 +118,26 @@
         android:text="/"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/totalView3"
+        app:layout_constraintStart_toEndOf="@+id/defectView3"
         app:layout_constraintTop_toBottomOf="@+id/dateView3" />
 
     <TextView
-        android:id="@+id/eRateView3"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:fontFamily="@font/lora_b"
-        android:text="0.24%"
-        android:textColor="#FF3030"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        android:layout_marginTop="3dp"
+        android:text=" yd"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toEndOf="@+id/totalView3"
+        app:layout_constraintTop_toBottomOf="@+id/dateView3" />
 
     <com.github.mikephil.charting.charts.ScatterChart
         android:id="@+id/idChart"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView11"
         tools:ignore="MissingClass" />
 </androidx.constraintlayout.widget.ConstraintLayout>
