--- a/frontend/app/src/main/res/layout/fabric_row.xml
+++ b/frontend/app/src/main/res/layout/fabric_row.xml
@@ -7,6 +7,16 @@
     android:layout_height="wrap_content"
     android:background="@drawable/round_box_grey">
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:text=" yd"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toEndOf="@+id/totalView"
+        app:layout_constraintTop_toBottomOf="@+id/dateView" />
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
@@ -94,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:fontFamily="@font/lora_b"
-        android:text="Error Rate"
+        android:text="Defect Rate"
         android:textColor="#FF3030"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/totalView" />
